implemented route to retrieve single entityMappings
